# Fission

./: README.md
backend/: .gitignore  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/ai/: README.md  __init__.py  agents.py  models.py  routes.py  schemas.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 44f5659abff5_initial_migration.py
backend/auth/: dep.py  models.py  routes.py  schemas.py
backend/auth/security_service/: __init__.py  blacklist.py  password.py  schemas.py  session.py  token_models.py  tokens.py
backend/core/: cache.py  config.py  database.py
backend/my_tasks/: __init__.py  dep.py  models.py  routes.py  schemas.py
backend/notifications/: __init__.py  models.py  routes.py  schemas.py  service.py  websocket.py
backend/rag_client/: __init__.py  client.py
backend/resume_ai/: ai.py  dep.py  models.py  routes.py  schemas.py
backend/rooms/: dep.py  models.py  routes.py  schemas.py
backend/src/app/: layout.tsx  page.tsx
backend/src/app/(main)/dashboard/: page.tsx
backend/src/app/auth/: layout.tsx  page.tsx
backend/src/components/: EmployeeView.tsx  PageHeader.tsx  StatCard.tsx  TeamLeadView.tsx  Toast.tsx  TopBar.tsx
backend/src/contexts/: AppContext.tsx
backend/tests/: README.md  conftest.py  test_ai_agent.py  test_rooms.py  test_tasks.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/components/: AIAgentModal.tsx  AIProgress.tsx  AddMemberModal.tsx  CreateRoomModal.tsx  CreateTaskModal.tsx  KanbanBoard.tsx  NotificationBell.tsx  Sidebar.tsx  TaskCard.tsx  ToastContainer.tsx  TopBar.tsx
frontend/src/components/ai/: AIAssistantModal.tsx  AnalysisHistory.tsx  TaskBreakdownView.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: ai.service.ts  api.ts
frontend/src/types/: ai.ts  index.ts
rag_service/: .gitignore  README.md  chunking_service.py  embedding_service.py  main.py  milvus_service.py  orchestrator.py  pyproject.toml  requirements.txt  routes.py
(+6 files in other folders)
