[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Madikhan33 <madizhysip@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.3"
granian = {extras = ["reload"], version = "^2.6.0"}
alembic = "^1.17.2"
sqlalchemy = "^2.0.44"
datetime = "^5.5"
sqlalchemy-orm = "^1.2.10"
pydantic = "^2.12.4"
jwt = "^1.4.0"
bcrypt = "^5.0.0"
pydantic-settings = "^2.12.0"
pyjwt = "^2.10.1"
redis = "^7.1.0"
asyncpg = "^0.30.0"
email-validator = "^2.3.0"
psycopg2-binary = "^2.9.11"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
aiosqlite = "^0.21.0"
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langgraph = "^0.2.58"
pypdf = "^6.4.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
